Calibration and Design of seekbar

--- a/app/src/main/res/layout/activity_sensor_view.xml
+++ b/app/src/main/res/layout/activity_sensor_view.xml
@@ -48,8 +48,8 @@
                 android:id="@+id/tvAccelXMax"
                 android:layout_row="1"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -77,8 +77,8 @@
                 android:id="@+id/tvAccelYMax"
                 android:layout_row="2"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -101,7 +101,11 @@
                 android:layout_row="4"
                 android:layout_column="0"
                 android:layout_columnSpan="4"
-                android:textColor="#ffffff"/>
+                android:textColor="#ffffff"
+                android:thumb="@drawable/seek_scrub_web"
+                android:progressDrawable="@drawable/thumb_image"
+                />
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -119,8 +123,8 @@
                 android:id="@+id/tvAccelZMax"
                 android:layout_row="3"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -196,8 +200,8 @@
                 android:id="@+id/tvMagneticYMAX"
                 android:layout_row="11"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -232,8 +236,8 @@
                 android:id="@+id/tvMagneticZMAX"
                 android:layout_row="12"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -251,8 +255,8 @@
                 android:id="@+id/textView14"
                 android:layout_row="9"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -265,7 +269,7 @@
                 android:textColor="#ffffff" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="Accelerometer "
                 android:id="@+id/textView7"
@@ -290,8 +294,8 @@
                 android:id="@+id/textView24"
                 android:layout_row="0"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -323,8 +327,8 @@
                 android:id="@+id/tvMagneticXMAX"
                 android:layout_row="10"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -343,8 +347,8 @@
                 android:id="@+id/tvRotationXMax"
                 android:layout_row="15"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -381,8 +385,8 @@
                 android:id="@+id/textView25"
                 android:layout_row="14"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -410,8 +414,8 @@
                 android:id="@+id/tvRotationYMax"
                 android:layout_row="16"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -429,21 +433,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="29dp"
                 android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
                 android:layout_row="5"
                 android:layout_column="0"
-                android:layout_columnSpan="4"
                 android:textColor="#ffffff"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Alpha"
+                android:id="@+id/alphaLabel"
+                android:layout_marginLeft="29dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:layout_alignParentRight="true"
+                android:layout_row="5"
+                android:layout_column="1"
+                android:layout_columnSpan="2"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Alpha"
                 android:id="@+id/alpha"
-                android:layout_row="6"
-                android:layout_column="0"
-                android:layout_columnSpan="4"
+                android:layout_marginLeft="29dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:layout_alignParentRight="true"
+                android:layout_row="5"
+                android:layout_column="1"
+                android:layout_columnSpan="2"
                 android:textColor="#ffffff" />
 
             <LinearLayout
@@ -464,8 +484,8 @@
                 android:id="@+id/tvRotationZMax"
                 android:layout_row="17"
                 android:layout_column="2"
-                android:layout_gravity="right"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_gravity="center_horizontal" />
 
 
 
