--- a/app/src/main/res/drawable/progress_bar.xml
+++ b/app/src/main/res/drawable/progress_bar.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:id="@android:id/background">
+    <item>
         <shape android:shape="rectangle" >
+            <size android:height="10dp" />
             <corners android:radius="5dp" />
-
-
             <gradient
                 android:angle="270"
                 android:endColor="#ccd3d8"
                 android:startColor="#ccd3d8" />
-            <size android:height="10dp" />
         </shape>
     </item>
-    <item android:id="@+id/progressshape">
+    <item>
         <clip>
             <shape android:shape="rectangle" >
                 <corners android:radius="5dp" />
