--- a/app/src/main/res/layout/activity_sensor_view.xml
+++ b/app/src/main/res/layout/activity_sensor_view.xml
@@ -441,7 +441,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Attenuation: 0.00000"
+                android:text="Low Pass: 0.00000"
                 android:id="@+id/alphaLabel"
                 android:layout_marginLeft="29dp"
                 android:layout_marginTop="14dp"
@@ -454,7 +454,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Attenuation: 0.00000"
+                android:text="Low Pass: 0.00000"
                 android:id="@+id/alpha"
                 android:layout_marginLeft="29dp"
                 android:layout_marginTop="14dp"
@@ -485,8 +485,6 @@
                 android:layout_column="2"
                 android:textColor="#ffffff"
                 android:layout_gravity="center_horizontal" />
-
-
 
         </GridLayout>
     </RelativeLayout>
