--- a/app/src/main/res/layout/activity_sensor_view.xml
+++ b/app/src/main/res/layout/activity_sensor_view.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scroll" android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+            android:id="@+id/scroll" android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:background="#000000">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/relative"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
         tools:context="SensorView.analog.ninja.SensorView"
         android:background="#000000">
 
@@ -21,6 +22,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -92,18 +94,20 @@
 
             <SeekBar
                 android:id="@+id/seekBar1"
-                android:layout_width="300dp"
-                android:layout_height="20dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="26dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:layout_marginRight="3dp"
+                android:maxHeight="5dp"
                 android:max="1000"
                 android:layout_row="4"
                 android:layout_column="0"
-                android:layout_columnSpan="4"
+                android:layout_columnSpan="3"
                 android:textColor="#ffffff"
-                android:thumb="@drawable/seek_scrub_web"
-                android:progressDrawable="@drawable/progress_bar" />
+                android:splitTrack="false"
+                android:thumb="@drawable/thumb_image"
+                android:progressDrawable="@drawable/progress_bar"
+                android:layout_gravity="center_horizontal"/>
 
 
             <TextView
